2003-06-10	Phil Torre <ptorre@zetron.com>

	PR 411/filesystem
	* src/imfs/imfs_unlink.c: Fix bug where renaming a memfile and
	then unlinking it causes a memory leak.

2003-03-25	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	PR 367/filesystem
	* src/dosfs/Makefile.am, src/dosfs/fat.c, src/dosfs/fat.h,
	src/dosfs/fat_fat_operations.c, src/dosfs/fat_file.c,
	src/dosfs/msdos.h, src/dosfs/msdos_dir.c: Some bugs were still
	present in the DOSFS implementation:
	    - FAT12 did not work properly on Big-Endian machines
	    - Some synchronization and error handling problems were present
	    - Some legal codings for EOC were not recognized


2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-03	Steven Johnson <sjohnson@neurizon.net>

	PR 338/filesystem
	* src/imfs/ioman.c: Fix reentrancy problem with 
	rtems_io_lookup_name() (API change).

2003-01-03	Eugeny S. Mints <Eugeny.Mints@oktet.ru>

	* src/dosfs/msdos_initsupp.c: Specify inherited priority as 0 since this
	is a FIFO queuing semaphore.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/imfs/Makefile.am: Eliminate C_O_FILES.
	* src/dosfs/Makefile.am: Ditto.

2002-12-02	Joel Sherrill <joel@OARcorp.com>

	* src/dosfs/fat.h, src/dosfs/msdos.h: Added casts to remove warnings
	on 16 bit targets like the h8300.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Cosmetical fixes.

2002-11-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix package name.

2002-10-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AM_INIT_AUTOMAKE.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-10-02	Jennifer Averett <jennifer@OARcorp.com>
